--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "helmet": "^3.21.1",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
+    "snoowrap": "^1.20.1",
     "sqlite3": "^4.1.0",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
